Switched www to flask.
In preparation to handling signups through a web interface.

--- a/www/templates/index.html
+++ b/www/templates/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
   <div id="container">
-    <img src="splash.png" />
+    <img src="/static/img/splash.png" />
   </div>
 </body>
 </html>
