--- a/www/templates/signup.html
+++ b/www/templates/signup.html
@@ -5,33 +5,44 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/static/css/bootstrap.min.css"/>
   <link rel="stylesheet" href="/static/css/bootstrap-responsive.min.css"/>
+  <link rel="stylesheet" href="/static/css/default.css"/>
 </head>
 
 <body>
   <div class="container">
-  <h1>Sign Up</h1>
+    <h1>Sign Up</h1>
 
-  <div class="alert alert-error">
-    <button class="close" data-dismiss="alert">&times;</button>
-    <strong>Warning!</strong> Best check yo self, you're not looking too good.
-  </div>
-  <form method="post">
+    {% block content %}
+      {% if error %}
+        <div class="alert alert-error">
+          <button class="close" data-dismiss="alert">&times;</button>
+          <strong>Error</strong> - {{ error }}
+        </div>
+      {% endif %}
+      <form method="post">
+        <label for="email">E-mail:</label>
+        <input type="text" id="email "name="email"
+            value="{{ request.form['email'] }}" />
 
-  
-    <label for="email">E-mail:</label>
-    <input type="text" id="email "name="email" />
+        <label for="password">Password:</label>
+        <input type="password" id="password" name="password" />
 
-    <label for="password">Password:</label>
-    <input type="password" id="password" name="password" />
+        <label for="email">Confirm password:</label>
+        <input type="password" id="password_repeat" name="password_repeat" />
 
-    <label for="email">Confirm password:</label>
-    <input type="password" id="password_repeat" name="password_repeat" />
+        <label class="checkbox">
+          {% if request.form['tou'] %}
+            <input type="checkbox" name="tou" checked="checked" />
+          {% else %}
+            <input type="checkbox" name="tou" />
+          {% endif %}
+          I agree to the <a href="#">Terms of Use</a>
+        </label>
+        <br />
+        <input type="submit" class="btn" value="Submit" />
+      </form>
+    {% endblock %}
 
-    <label class="checkbox">
-      <input type="checkbox"> I agree on the TOS
-    </label>
-    <button type="submit" class="btn">Submit</button>
-  </form>
   </div>
 </body>
 </html>
