--- a/www/templates/signup.html
+++ b/www/templates/signup.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="/static/css/default.css"/>
 </head>
 
-<body>
+<body class="signup">
   <div class="container">
     <h1>Sign Up</h1>
 
