Changed download link + logo.
App download link now points to Google Play. Included the name (GroupStreamer)
into the icon for the web site. Makes it clearer (although it's not really a
definitive design...).

--- a/www/templates/index.html
+++ b/www/templates/index.html
@@ -7,6 +7,21 @@
   <link rel="stylesheet" href="/static/css/bootstrap-responsive.min.css"/>
   <link rel="stylesheet" href="/static/css/default.css"/>
   <title>GroupStreamer.com</title>
+
+  <!-- Google Analytics -->
+  <script type="text/javascript">
+
+    var _gaq = _gaq || [];
+    _gaq.push(['_setAccount', 'UA-473720-8']);
+    _gaq.push(['_trackPageview']);
+
+    (function() {
+      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+    })();
+
+  </script>
 </head>
 <body class="index">
 
@@ -43,7 +58,7 @@
           </p>
           <p>
             <a class="btn btn-primary btn-large"
-                href="/static/bin/unison-android.apk">
+                href="https://play.google.com/store/search?q=pname:ch.epfl.unison">
               Download for Android
             </a>
           </p>
